# tape-sort

./: .gitignore  CMakeLists.txt  README.md  config.ini
include/: config.h  directory.h  emulator.h  sort.h  tape.h
src/: main.cpp  sort.cpp
tests/: tests.cpp
tmp/: file1-out.txt  file1.txt
to-remove/: to-rm  to-rm.txt
